versioned_docs/version-5.2/indexes/querying/spatial.mdx
---
title: "Query a Spatial Index"
hide_table_of_contents: true
sidebar_label: Spatial
sidebar_position: 11
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "nodejs", "java"];


# Query a Spatial Index
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* Documents that contain spatial data can be queried by spatial queries that employ geographical criteria.  
  You have two options:

    * __Dynamic spatial query__  
      Either make a dynamic spatial query on a collection (see [how to make a spatial query](../../client-api/session/querying/how-to-make-a-spatial-query.mdx)).  
      An auto-index will be created by the server.

    * __Spatial index query__  
      Or, index your documents' spatial data in a static-index (see [indexing spatial data](../../indexes/indexing-spatial-data.mdx))  
      and then make a spatial query on this index ( __described in this article__ ).

* A few examples of querying a spatial index are provided below.  
  __A spatial query performed on a static-index is similar to the__ [dynamic spatial query](../../client-api/session/querying/how-to-make-a-spatial-query.mdx).  
  Find all spatial API methods listed [here](../../client-api/session/querying/how-to-make-a-spatial-query.mdx#spatial-api).  

* Examples in this page:
    * [Search by radius](../../indexes/querying/spatial.mdx#search-by-radius)
    * [Search by shape](../../indexes/querying/spatial.mdx#search-by-shape)
    * [Sort results](../../indexes/querying/spatial.mdx#sort-results)

</Admonition>
## Search by radius

* Query the spatial index:

* Use the `WithinRadius` method to search for all documents containing spatial data that is located  
  within the specified distance from the given center point.

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="csharp">
{`// Define a spatial query on index 'Events_ByNameAndCoordinates'
List<Event> employeesWithinRadius = session
    .Query<Event, Events_ByNameAndCoordinates>()
     // Call 'Spatial' method
    .Spatial(
        // Pass the spatial index-field containing the spatial data
        "Coordinates",
        // Set the geographical area in which to search for matching documents
        // Call 'WithinRadius', pass the radius and the center points coordinates  
        criteria => criteria.WithinRadius(20, 47.623473, -122.3060097))
    .ToList();

// The query returns all matching Event entities
// that are located within 20 kilometers radius
// from point (47.623473 latitude, -122.3060097 longitude).
`}
</CodeBlock>
</TabItem>
<TabItem value="DocumentQuery" label="DocumentQuery">
<CodeBlock language="csharp">
{`// Define a spatial query on index 'Events_ByNameAndCoordinates'
List<Event> employeesWithinRadius = session.Advanced
    .DocumentQuery<Event, Events_ByNameAndCoordinates>()
     // Call 'Spatial' method
    .Spatial(
        // Pass the spatial index-field containing the spatial data
        "Coordinates",
        // Set the geographical area in which to search for matching documents
        // Call 'WithinRadius', pass the radius and the center points coordinates  
        criteria => criteria.WithinRadius(20, 47.623473, -122.3060097))
    .ToList();

// The query returns all matching Event entities
// that are located within 20 kilometers radius
// from point (47.623473 latitude, -122.3060097 longitude).
`}
</CodeBlock>
</TabItem>
<TabItem value="Index" label="Index">
<CodeBlock language="csharp">
{`// Define an index with a spatial field
public class Events_ByNameAndCoordinates : AbstractIndexCreationTask<Event>
{
    public Events_ByNameAndCoordinates()
    {
        Map = events => from e in events
            select new
            {
                Name = e.Name,
                // Call 'CreateSpatialField' to create a spatial index-field
                // Field 'Coordinates' will be composed of lat & lng supplied from the document
                Coordinates = CreateSpatialField(e.Latitude, e.Longitude)
                
                // Documents can be retrieved
                // by making a spatial query on the 'Coordinates' index-field
            };
    }
}

public class Event
{
    public string Id { get; set; }
    public string Name { get; set; }
    public double Latitude { get; set; }
    public double Longitude { get; set; }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index "Events/ByNameAndCoordinates"
where spatial.within(
    Coordinates,
    spatial.circle(20, 47.623473, -122.3060097)
)

// The query returns all matching Event entities
// that are located within 20 kilometers radius
// from point (47.623473 latitude, -122.3060097 longitude).
`}
</CodeBlock>
</TabItem>
</Tabs>



## Search by shape

* Query the spatial index:  
  Use the `RelatesToShape` method to search for all documents containing spatial data that is located  
  in the specified relation to the given shape.

* The shape in the query is specified as either a __circle__ or a __polygon__ in a WKT format.  
  See polygon rules [here](../../client-api/session/querying/how-to-make-a-spatial-query.mdx#polygonrules).

* The relation to the shape can be one of: `Within`, `Contains`, `Disjoint`, `Intersects`.

* See more usage examples in the [dynamic search by shape](../../client-api/session/querying/how-to-make-a-spatial-query.mdx#search-by-shape) query.

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="csharp">
{`// Define a spatial query on index 'EventsWithWKT_ByNameAndWKT'
List<EventWithWKT> employeesWithinShape = session
    .Query<EventWithWKT, EventsWithWKT_ByNameAndWKT>()
    // Call 'Spatial' method
    .Spatial(
        // Pass the spatial index-field containing the spatial data
        "WKT",
        // Set the geographical search criteria, call 'RelatesToShape'
        criteria => criteria.RelatesToShape(
            // Specify the WKT string
            shapeWkt: @"POLYGON ((
                           -118.6527948 32.7114894,
                           -95.8040242 37.5929338,
                           -102.8344151 53.3349629,
                           -127.5286633 48.3485664,
                           -129.4620208 38.0786067,
                           -118.7406746 32.7853769,
                           -118.6527948 32.7114894
                      ))",
            // Specify the relation between the WKT shape and the documents spatial data
            relation: SpatialRelation.Within))
    .ToList();

// The query returns all matching Event entities
// that are located within the specified polygon.
`}
</CodeBlock>
</TabItem>
<TabItem value="DocumentQuery" label="DocumentQuery">
<CodeBlock language="csharp">
{`// Define a spatial query on index 'EventsWithWKT_ByNameAndWKT'
List<EventWithWKT> employeesWithinShape = session.Advanced
    .DocumentQuery<EventWithWKT, EventsWithWKT_ByNameAndWKT>()
    // Call 'Spatial' method
    .Spatial(
        // Pass the spatial index-field containing the spatial data
        "WKT",
        // Set the geographical search criteria, call 'RelatesToShape'
        criteria => criteria.RelatesToShape(
            // Specify the WKT string
            shapeWkt: @"POLYGON ((
                           -118.6527948 32.7114894,
                           -95.8040242 37.5929338,
                           -102.8344151 53.3349629,
                           -127.5286633 48.3485664,
                           -129.4620208 38.0786067,
                           -118.7406746 32.7853769,
                           -118.6527948 32.7114894
                      ))",
            // Specify the relation between the WKT shape and the documents spatial data
            relation: SpatialRelation.Within))
    .ToList();

// The query returns all matching Event entities
// that are located within the specified polygon.
`}
</CodeBlock>
</TabItem>
<TabItem value="Index" label="Index">
<CodeBlock language="csharp">
{`// Define an index with a spatial field
public class EventsWithWKT_ByNameAndWKT : AbstractIndexCreationTask<EventWithWKT>
{
    public EventsWithWKT_ByNameAndWKT()
    {
        Map = events => from e in events
            select new
            {
                Name = e.Name,
                // Call 'CreateSpatialField' to create a spatial index-field
                // Field 'WKT' will be composed of the WKT string supplied from the document
                WKT = CreateSpatialField(e.WKT)

                // Documents can be retrieved
                // by making a spatial query on the 'WKT' index-field
            };
    }
}

public class EventWithWKT
{
    public string Id { get; set; }
    public string Name { get; set; }
    public string WKT { get; set; }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index "EventsWithWKT/ByNameAndWKT"
where spatial.within(
    WKT,
    spatial.wkt("POLYGON ((
        -118.6527948 32.7114894,
        -95.8040242 37.5929338,
        -102.8344151 53.3349629,
        -127.5286633 48.3485664,
        -129.4620208 38.0786067,
        -118.7406746 32.7853769,
        -118.6527948 32.7114894))")
)

// The query returns all matching Event entities
// that are located within the specified polygon.
`}
</CodeBlock>
</TabItem>
</Tabs>

* Note:  
  The index in the above example indexes a WKT string in the spatial index-field.  
  However, you can query by shape also on spatial data that is indexed as lat/lng coordinates.  



## Sort results

* Query the spatial index:  
  Use `OrderByDistance` or `OrderByDistanceDescending` to sort the results by distance from a given point.

* By default, distance in RavenDB measured in **kilometers**.  
  The distance can be rounded to a specific range.  

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="csharp">
{`// Define a spatial query on index 'Events_ByNameAndCoordinates'
List<Event> employeesSortedByDistance = session
    .Query<Event, Events_ByNameAndCoordinates>()
     // Filter results by geographical criteria
    .Spatial(
        "Coordinates",
        criteria => criteria.WithinRadius(20, 47.623473, -122.3060097))
     // Sort results, call 'OrderByDistance'
    .OrderByDistance(
        // Pass the spatial index-field containing the spatial data
        "Coordinates",
        // Sort the results by their distance from this point: 
        47.623473, -122.3060097)
    .ToList();

// Return all matching Event entities located within 20 kilometers radius
// from point (47.623473 latitude, -122.3060097 longitude).

// Sort the results by their distance from a specified point,
// the closest results will be listed first.
`}
</CodeBlock>
</TabItem>
<TabItem value="DocumentQuery" label="DocumentQuery">
<CodeBlock language="csharp">
{`// Define a spatial query on index 'Events_ByNameAndCoordinates'
List<Event> employeesSortedByDistance = session.Advanced
    .DocumentQuery<Event, Events_ByNameAndCoordinates>()
     // Filter results by geographical criteria
    .Spatial(
        "Coordinates",
        criteria => criteria.WithinRadius(20, 47.623473, -122.3060097))
     // Sort results, call 'OrderByDistance'
    .OrderByDistance(
        // Pass the spatial index-field containing the spatial data
        "Coordinates",
        // Sort the results by their distance from this point: 
        47.623473, -122.3060097)
    .ToList();

// Return all matching Event entities located within 20 kilometers radius
// from point (47.623473 latitude, -122.3060097 longitude).

// Sort the results by their distance from a specified point,
// the closest results will be listed first.
`}
</CodeBlock>
</TabItem>
<TabItem value="Index" label="Index">
<CodeBlock language="csharp">
{`// Define an index with a spatial field
public class Events_ByNameAndCoordinates : AbstractIndexCreationTask<Event>
{
    public Events_ByNameAndCoordinates()
    {
        Map = events => from e in events
            select new
            {
                Name = e.Name,
                // Call 'CreateSpatialField' to create a spatial index-field
                // Field 'Coordinates' will be composed of lat & lng supplied from the document
                Coordinates = CreateSpatialField(e.Latitude, e.Longitude)
                
                // Documents can be retrieved
                // by making a spatial query on the 'Coordinates' index-field
            };
    }
}

public class Event
{
    public string Id { get; set; }
    public string Name { get; set; }
    public double Latitude { get; set; }
    public double Longitude { get; set; }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index "Events/ByNameAndCoordinates"
where spatial.within(
    Coordinates,
    spatial.circle(20, 47.623473, -122.3060097)
)
order by spatial.distance(
    Coordinates,
    spatial.point(47.623473, -122.3060097)
)

// The query returns all matching Event entities located within 20 kilometers radius
// from point (47.623473 latitude, -122.3060097 longitude).

// Sort the results by their distance from a specified point,
// the closest results will be listed first.
`}
</CodeBlock>
</TabItem>
</Tabs>

* More sorting examples are available in the [dynamic spatial query](../../client-api/session/querying/how-to-make-a-spatial-query.mdx#spatial-sorting) article.

* To get the __distance__ for each resulting entity see [get resulting distance](../../client-api/session/querying/how-to-make-a-spatial-query.mdx#getresultingdistance).




</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="Note">

* Documents that contain spatial data can be queried by spatial queries that employ geographical criteria.  
  You have two options:

    * __Dynamic spatial query__  
      Either make a dynamic spatial query on a collection (see [how to make a spatial query](../../client-api/session/querying/how-to-make-a-spatial-query.mdx)).  
      An auto-index will be created by the server.

    * __Spatial index query__  
      Or, index your documents' spatial data in a static-index (see [indexing spatial data](../../indexes/indexing-spatial-data.mdx))  
      and then make a spatial query on this index ( __described in this article__ ).

* A few examples of querying a spatial index are provided below.  
  __A spatial query performed on a static-index is similar to the__ [dynamic spatial query](../../client-api/session/querying/how-to-make-a-spatial-query.mdx).  
  Find all spatial API methods listed [here](../../client-api/session/querying/how-to-make-a-spatial-query.mdx#spatial-api).  

* Examples in this page:
    * [Search by radius](../../indexes/querying/spatial.mdx#search-by-radius)
    * [Search by shape](../../indexes/querying/spatial.mdx#search-by-shape)
    * [Sort results](../../indexes/querying/spatial.mdx#sort-results)

</Admonition>
## Search by radius

* Query the spatial index:

* Use the `withinRadius` method to search for all documents containing spatial data that is located  
  within the specified distance from the given center point.

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="js">
{`// Define a spatial query on index 'Events/ByNameAndCoordinates'
const employeesWithinRadius = await session
    .query({ indexName: "Events/ByNameAndCoordinates"})
     // Call 'spatial' method
    .spatial(
        /// Pass the spatial index-field containing the spatial data
        "coordinates",
        // Set the geographical area in which to search for matching documents
        // Call 'withinRadius', pass the radius and the center points coordinates  
        criteria => criteria.withinRadius(20, 47.623473, -122.3060097))
    .all();

// The query returns all matching Event entities
// that are located within 20 kilometers radius
// from point (47.623473 latitude, -122.3060097 longitude).
`}
</CodeBlock>
</TabItem>
<TabItem value="Index" label="Index">
<CodeBlock language="js">
{`// Define an index with a spatial field
class Events_ByNameAndCoordinates extends AbstractJavaScriptIndexCreationTask {
    constructor() {
        super();
        const { createSpatialField } = this.mapUtils();

        this.map('events', e => {
            return {
                name: e.Name,
                // Call 'createSpatialField' to create a spatial index-field
                // Field 'coordinates' will be composed of lat & lng supplied from the document
                coordinates: createSpatialField(
                    e.latitude,
                    e.longitude
                )
                
                // Documents can be retrieved
                // by making a spatial query on the 'coordinates' index-field
            };
        });
    }
}

class Event {
    constructor(id, name, latitude, longitude) {
        this.id = id;
        this.name = name;
        this.latitude = latitude
        this.longitude = longitude;
    }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index "Events/ByNameAndCoordinates"
where spatial.within(
    Coordinates,
    spatial.circle(20, 47.623473, -122.3060097)
)

// The query returns all matching Event entities
// that are located within 20 kilometers radius
// from point (47.623473 latitude, -122.3060097 longitude).
`}
</CodeBlock>
</TabItem>
</Tabs>



## Search by shape

* Query the spatial index:  
  Use the `relatesToShape` method to search for all documents containing spatial data that is located  
  in the specified relation to the given shape.

* The shape in the query is specified as either a __circle__ or a __polygon__ in a WKT format.  
  See polygon rules [here](../../client-api/session/querying/how-to-make-a-spatial-query.mdx#polygonrules).

* The relation to the shape can be one of: `Within`, `Contains`, `Disjoint`, `Intersects`.

* See more usage examples in the [dynamic search by shape](../../client-api/session/querying/how-to-make-a-spatial-query.mdx#search-by-shape) query.

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="js">
{`// Define a spatial query on index 'EventsWithWKT/ByNameAndWKT'
const employeesWithinShape = await session
    .query({ indexName: "EventsWithWKT/ByNameAndWKT" })
     // Call 'spatial' method
    .spatial(
        // Pass the spatial index-field containing the spatial data
        "wkt",
        // Set the geographical search criteria, call 'relatesToShape'
        criteria => criteria.relatesToShape(
            // Specify the WKT string
            \`POLYGON ((
                   -118.6527948 32.7114894,
                   -95.8040242 37.5929338,
                   -102.8344151 53.3349629,
                   -127.5286633 48.3485664,
                   -129.4620208 38.0786067,
                   -118.7406746 32.7853769,
                   -118.6527948 32.7114894
            ))\`,
            // Specify the relation between the WKT shape and the documents spatial data
            "Within"
        ))
    .all();

// The query returns all matching Event entities
// that are located within the specified polygon.
`}
</CodeBlock>
</TabItem>
<TabItem value="Index" label="Index">
<CodeBlock language="js">
{`// Define an index with a spatial field
class EventsWithWKT_ByNameAndWKT extends AbstractJavaScriptIndexCreationTask {
    constructor() {
        super();
        const { createSpatialField } = this.mapUtils();

        this.map('events', e => {
            return {
                name: e.Name,
                // Call 'createSpatialField' to create a spatial index-field
                // Field 'wkt' will be composed of the WKT string supplied from the document
                wkt: createSpatialField(e.wkt)

                // Documents can be retrieved by
                // making a spatial query on the 'wkt' index-field
            };
        });
    }
}

class EventWithWKT {
    constructor(id, name, wkt) {
        this.id = id;
        this.name = name;
        this.wkt = wkt;
    }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index "EventsWithWKT/ByNameAndWKT"
where spatial.within(
    WKT,
    spatial.wkt("POLYGON ((
        -118.6527948 32.7114894,
        -95.8040242 37.5929338,
        -102.8344151 53.3349629,
        -127.5286633 48.3485664,
        -129.4620208 38.0786067,
        -118.7406746 32.7853769,
        -118.6527948 32.7114894))")
)

// The query returns all matching Event entities
// that are located within the specified polygon.
`}
</CodeBlock>
</TabItem>
</Tabs>

* Note:  
  The index in the above example indexes a WKT string in the spatial index-field.  
  However, you can query by shape also on spatial data that is indexed as lat/lng coordinates.



## Sort results

* Query the spatial index:  
  Use `orderByDistance` or `orderByDistanceDescending` to sort the results by distance from a given point.

* By default, distance in RavenDB measured in **kilometers**.  
  The distance can be rounded to a specific range.  

<Tabs groupId='languageSyntax'>
<TabItem value="Query" label="Query">
<CodeBlock language="js">
{`// Define a spatial query on index 'Events_ByNameAndCoordinates'
const employeesSortedByDistance = await session
    .query({ indexName: "Events/ByNameAndCoordinates" })
     // Filter results by geographical criteria
    .spatial(
        "coordinates",
        criteria => criteria.withinRadius(20, 47.623473, -122.3060097))
     // Sort results, call 'orderByDistance'
    .orderByDistance(
        // Pass the spatial index-field containing the spatial data
        "coordinates",
        // Sort the results by their distance from this point: 
        47.623473, -122.3060097)
    .all();

// Return all matching Event entities located within 20 kilometers radius
// from point (47.623473 latitude, -122.3060097 longitude).

// Sort the results by their distance from a specified point,
// the closest results will be listed first.
`}
</CodeBlock>
</TabItem>
<TabItem value="Index" label="Index">
<CodeBlock language="js">
{`// Define an index with a spatial field
class Events_ByNameAndCoordinates extends AbstractJavaScriptIndexCreationTask {
    constructor() {
        super();
        const { createSpatialField } = this.mapUtils();

        this.map('events', e => {
            return {
                name: e.Name,
                // Call 'createSpatialField' to create a spatial index-field
                // Field 'coordinates' will be composed of lat & lng supplied from the document
                coordinates: createSpatialField(
                    e.latitude,
                    e.longitude
                )
                
                // Documents can be retrieved
                // by making a spatial query on the 'coordinates' index-field
            };
        });
    }
}

class Event {
    constructor(id, name, latitude, longitude) {
        this.id = id;
        this.name = name;
        this.latitude = latitude
        this.longitude = longitude;
    }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index "Events/ByNameAndCoordinates"
where spatial.within(
    Coordinates,
    spatial.circle(20, 47.623473, -122.3060097)
)
order by spatial.distance(
    Coordinates,
    spatial.point(47.623473, -122.3060097)
)

// The query returns all matching Event entities located within 20 kilometers radius
// from point (47.623473 latitude, -122.3060097 longitude).

// Sort the results by their distance from a specified point,
// the closest results will be listed first.
`}
</CodeBlock>
</TabItem>
</Tabs>

* More sorting examples are available in the [dynamic spatial query](../../client-api/session/querying/how-to-make-a-spatial-query.mdx#spatial-sorting) article.

* To get the __distance__ for each resulting entity see [get resulting distance](../../client-api/session/querying/how-to-make-a-spatial-query.mdx#getresultingdistance).




</LanguageContent>
<LanguageContent language="java">


To perform a spatial search, you can use the `spatial` method which contains a full spectrum of spatial capabilities. 
You can check the detailed Client API reference for this method [here](../../client-api/session/querying/how-to-make-a-spatial-query.mdx).

## Radius Search

The most basic usage and probably most common one is to search for all points or shapes within provided distance from the given center point. To perform this search use the `withinRadius` method.

<Tabs groupId='languageSyntax'>
<TabItem value="Java" label="Java">
<CodeBlock language="java">
{`List<Event> results = session
    .query(Event.class)
    .spatial(new PointField("latitude", "longitude"),
        criteria -> criteria.withinRadius(500, 30, 30))
    .toList();
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from Events
where spatial.within(spatial.point(latitude, longitude), spatial.circle(500, 30, 30))
`}
</CodeBlock>
</TabItem>
</Tabs>

## Advanced Search

The most advanced (and low-level) method available is `relatesToShape`

<Tabs groupId='languageSyntax'>
<TabItem value="Java" label="Java">
<CodeBlock language="java">
{`List<Event> results = session
    .query(Event.class)
    .spatial(new PointField("latitude", "longitude"),
        criteria -> criteria.relatesToShape(
            "Circle(30 30 d=500.0000)",
            SpatialRelation.WITHIN
        ))
    .toList();
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from Events
where spatial.within(spatial.point(latitude, longitude), spatial.wkt('Circle(30 30 d=500.0000)'))
`}
</CodeBlock>
</TabItem>
</Tabs>

Where the shape is in [WKT](https://en.wikipedia.org/wiki/Well-known_text_representation_of_geometry) format and the relation is one of `within`, `contains`, `disjoint`, `intersects`. The above example will yield the same results as the example from the `Radius Search` section.

<Admonition type="info" title="Polygons" id="polygons" href="#polygons">
When using `spatial.wkt()` to define a **polygon**, the vertices (points that form the corners of the polygon) must be listed 
in a counter-clockwise order:  



![NoSQL ACID DB - Query a Spatial Index](./assets/spatial_1.png)
</Admonition>

## Static Indexes

All of the above examples are using the dynamic querying capabilities of RavenDB and will create automatic indexes to retrieve their results. However, spatial queries can also be performed against static indexes, and this is done in a very similar way.

<Tabs groupId='languageSyntax'>
<TabItem value="Java" label="Java">
<CodeBlock language="java">
{`List<Event> results = session
    .query(Event.class, Events_ByCoordinates.class)
    .spatial("coordinates",
        criteria -> criteria.withinRadius(500, 30, 30))
    .toList();
`}
</CodeBlock>
</TabItem>
<TabItem value="Index" label="Index">
<CodeBlock language="java">
{`public static class Events_ByCoordinates extends AbstractIndexCreationTask {
    public Events_ByCoordinates() {
        map = "docs.Events.Select(e => new {" +
            "    Coordinates = this.CreateSpatialField(((double ? ) e.latitude), ((double ? ) e.longitude))" +
            "})";
    }
}
`}
</CodeBlock>
</TabItem>
<TabItem value="RQL" label="RQL">
<CodeBlock language="sql">
{`from index 'Events/ByCoordinates'
where spatial.within(coordinates, spatial.circle(500, 30, 30))
`}
</CodeBlock>
</TabItem>
</Tabs>

<Admonition type="info" title="Info">
If you want to know how to setup and customize a spatial field in static index please refer to [this](../../indexes/indexing-spatial-data.mdx) article.
</Admonition>

## Ordering

In order to sort the results by distance, please use the `orderByDistance` or `orderByDistanceDescending` methods. You can read more about them [here](../../client-api/session/querying/how-to-make-a-spatial-query.mdx).

## Remarks

<Admonition type="info" title="Info">
Distance in RavenDB by default is measured in **kilometers**.
</Admonition>


</LanguageContent>

<!---
### Indexes
- [Indexing Spatial Data](../../indexes/indexing-spatial-data)

### Client API
- [How to make a spatial query](../../client-api/session/querying/how-to-make-a-spatial-query)
- [How to Query a Spatial Index](../../indexes/querying/spatial)

### Studio
- [Spatial query view](../../studio/database/queries/spatial-queries-map-view)


-->